changed layout, fixed sizing, universal loading resolution

--- a/encryption/index.html
+++ b/encryption/index.html
@@ -21,13 +21,13 @@
 					<form>
 						Message: <input id="encryptMessage" type="text" name="encryptMessage"><br>
 						Key (optional):  <input id="encryptKey" type="text" name="encryptKey"><br>
-						<input id="clickEncrypt" value="Click When Ready" type="button" name="submit" onClick="cclickEncrypt()">
+						<input class="button" id="clickEncrypt" value="Click Me!" type="button" name="submit" onClick="cclickEncrypt()">
 					</form>
 					<p>If you wish to decrypt a combo:</p>
 					<form>
 						Combo: <input id="decryptCombo" type="text" name="decryptCombo"><br>
 						Key (required): <input id="decryptKey" type="text" name="decryptKey"><br>
-						<input id="clickDecrypt" value="Click When Ready" type="button" name="submit" onClick="cclickDecrypt()">
+						<input class="button" id="clickDecrypt" value="Click Me!" type="button" name="submit" onClick="cclickDecrypt()">
 					</form>
 					<script src="main.js"></script>
 
